Update QR Scanner with UI

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,5 +93,11 @@
     "clear" : "Clear",
     "yes": "Yes",
     "no": "No"
+  },
+  "qr-code": {
+    "title": "QR Code",
+    "option": "Select Nickname to generate QR",
+    "btn1": "Generate QR",
+    "btn2": "Scan QR"
   }
 }
